--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app",
   "version": "0.1.0",
-  "homepage": "https://wai-AI.github.io/Lab6WEB/todo-app",
+  "homepage": "https://wai-AI.github.io/Lab6Web",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
